# VoiceAgent

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: deploy-backend.yml
.jules/: bolt.md
alembic/: env.py
alembic/versions/: 04f466c7e8e6_initial_schema_with_multi_tenancy.py  5c81c2b7c57b_make_datetime_columns_timezone_aware.py  a1b2c3d4e5f6_replace_hashed_password_with_supabase.py  b8e4f1a2d3c5_add_tenant_agent_settings.py  c2f9b7d3a8aa_placeholder_for_existing_db.py  e73f5a8b1c9d_add_tenant_id_to_call_logs.py  f059c349801a_add_call_logs_and_call_messages_tables.py
app/: auth.py  config.py  database.py  main.py  seed.py
app/agent/: graph.py  prompts.py  state.py  tools.py
app/models/: __init__.py  appointment.py  availability.py  call_log.py  office.py  patient.py  provider.py  tenant.py  tenant_agent_settings.py  user.py
app/routers/: admin.py  auth.py  calls.py  dashboard_ws.py  super_admin.py
app/schemas/: appointment.py  patient.py
app/services/: active_calls.py  cache.py  call_log_service.py  office_context.py  patient_service.py  pubsub.py  scheduling.py  tenant_runtime.py  tenant_service.py
app/voice/: audio.py  interruption.py  pipeline.py  realtime.py  session.py  stt.py  tts.py
dashboard/: index.html  package-lock.json  package.json  stitch_reference.html
dashboard/src/: App.tsx  api.ts  index.css  types.ts  useWebSocket.ts
dashboard/src/components/: AppointmentsPage.tsx  ClientsPage.tsx  DashboardOverview.tsx  LiveCallsPage.tsx  ProvidersPage.tsx  SettingsPage.tsx  Sidebar.tsx
